<resources>
    <string name="app_name">CoronaVirus</string>
    <string name="title_stats">Stats</string>
    <string name="title_map">Map</string>
    <string name="title_chart">Chart</string>
    <string name="title_news">News</string>
    <string name="country_region">Country</string>
    <string name="confirmed_infected_main_view_label">Infected</string>
    <string name="recovered_main_view_label">Recovered</string>
    <string name="deaths_main_view_label">Deaths</string>
    <string name="title_activity_maps">Map</string>
    <string name="confirm_case">Confirm: %1$d.\nRecovered: %2$d.\nDeaths: %3$d.</string>
    <string name="title_info">Info</string>
    <string name="title_remove_ads">Remove Ads</string>
    <string name="pro_version">Pro Version</string>
</resources>
