<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_stats"
        android:icon="@drawable/ic_stats"
        android:title="@string/title_stats" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map"
        android:title="@string/title_map" />

<!--    <item-->
<!--        android:id="@+id/navigation_chart"-->
<!--        android:icon="@drawable/ic_chart"-->
<!--        android:title="@string/title_chart" />-->
<!--    <item-->
<!--        android:id="@+id/navigation_news"-->
<!--        android:icon="@drawable/ic_news"-->
<!--        android:title="@string/title_news" />-->
    <item
        android:id="@+id/navigation_info"
        android:icon="@drawable/ic_info"
        android:title="@string/title_info" />

</menu>
