<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_stats">

    <fragment
        android:id="@+id/navigation_stats"
        android:name="com.tntkhang.coronavirus.ui.stats.StatsFragment"
        android:label="@string/title_stats"
        tools:layout="@layout/fragment_stats" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.tntkhang.coronavirus.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

<!--    <fragment-->
<!--        android:id="@+id/navigation_chart"-->
<!--        android:name="com.tntkhang.coronavirus.ui.chart.ChartFragment"-->
<!--        android:label="@string/title_chart"-->
<!--        tools:layout="@layout/fragment_chart" />-->

<!--    <fragment-->
<!--        android:id="@+id/navigation_news"-->
<!--        android:name="com.tntkhang.coronavirus.ui.news.NewsFragment"-->
<!--        android:label="@string/title_news"-->
<!--        tools:layout="@layout/fragment_news" />-->
    <fragment
        android:id="@+id/navigation_info"
        android:name="com.tntkhang.coronavirus.ui.info.InfoFragment"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_info" />
</navigation>