<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="3dp"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/confirmed_infected_main_view_label"
                            android:textColor="@color/infected"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/total_confirmed"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="20704"
                            android:textColor="@color/infected"
                            android:textSize="20sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/recovered_main_view_label"
                            android:textColor="@color/primary"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/total_recovered"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="727"
                            android:textColor="@color/primary"
                            android:textSize="20sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/deaths_main_view_label"
                            android:textColor="@android:color/black"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/total_deaths"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="427"
                            android:textColor="@android:color/black"
                            android:textSize="20sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ln_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="20"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="30dp"
                            android:layout_weight="10"
                            android:paddingTop="1dp"
                            android:paddingBottom="4dp"
                            android:text="@string/country_region"
                            android:textColor="@android:color/black"
                            android:textAlignment="center"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="30dp"
                            android:layout_weight="5"
                            android:contentDescription="@string/confirmed_infected_main_view_label"
                            android:src="@drawable/ic_infacted" />

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="30dp"
                            android:layout_weight="5"
                            android:contentDescription="@string/recovered_main_view_label"
                            android:src="@drawable/ic_recovered" />

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="30dp"
                            android:layout_weight="5"
                            android:contentDescription="@string/deaths_main_view_label"
                            android:src="@drawable/ic_deaths" />

                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="#e8e9eb" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/item_stats"
                    android:clipToPadding="false"/>

            </LinearLayout>
        </LinearLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>